Add Lizardfolk homebrew race

--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -63,7 +63,7 @@
                                         Trox are medium size</td>
                                 </tr>
                                 <tr>
-                                    <th>Senses</th>
+                                    <th>Special senses</th>
                                     <td>
                                         <div><span class="text-bold">Darkvision</span><br>
                                             Trox can see in the dark up to 60 feet
@@ -102,7 +102,8 @@
                                 <tr>
                                     <th>Desert Brood</th>
                                     <td>To escape the threat of Drukir these Trox have adapted to the sun and surviving
-                                        on the surface above. This trait replaces Burrow and Light Blindness.</td>
+                                        on the surface above.<br><span class="text-italic">This replaces Burrow
+                                            and Light Blindness.</span></td>
                                 </tr>
                             </table>
 
@@ -137,7 +138,120 @@
                 <div class="information-item">
                     <div class="information-title">The Lizardfolk</div>
                     <div class="information-content">
-                        Insert content
+                        Flavortext
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Wis, +2 Con<br>Lizardfolk are tough and strongwilled</td>
+                                </tr>
+                                <tr>
+                                    <th>Type</th>
+                                    <td><span class="text-bold">Humanoid (reptilian)</span><br>Lizardfolks are humanoids
+                                        with the reptillian subtype
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Speed</th>
+                                    <td><span class="text-bold">Normal</span><br>Lizardfolk have a base speed of 30 feet
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Size</th>
+                                    <td><span class="text-bold">Medium</span><br>Lizardfolk are medium size
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Special senses</th>
+                                    <td>
+                                        <div>Lizardfolk have no special senses.</div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Special movement</th>
+                                    <td><span class="text-bold">Swim</span><br>Lizardfolk have a swim speed of 30 feet
+                                        and thus gain a +8 racial bonus on Swim checks.</td>
+                                </tr>
+                                <tr>
+                                    <th>Special abilities</th>
+                                    <td>
+                                        <div><span class="text-bold">Natural Armor</span><br>Lizardfolk have tough scaly
+                                            skin, granting them a +1 natural armor bonus.</div>
+                                        <div><span class="text-bold">Strong Lungs</span><br>Lizardfolk can hold their
+                                            breath
+                                            2 times longer than normal.</div>
+                                        <div><span class="text-bold">Claws</span><br>Lizardfolk receive two claw
+                                            attacks.
+                                            These are primary natural attacks. The damage is based on the creature's
+                                            size
+                                            (1d4 for Medium creatures.)</div>
+                                        <div><span class="text-bold">Unique rule</span><br>Lizardfolk are eligible for
+                                            the Tail Terror Kobold feat. Their Tail attack is a secondary natural attack
+                                            that deals 1d6 damage
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Languages</th>
+                                    <td>Xenophobic Lizardfolk start knowing their racial language only.<br>Lizardfolk
+                                        with high Intelligence scores can choose from the following: Aquan, Draconic,
+                                        Aklo.</td>
+                                </tr>
+                            </table>
+
+                            <div class="information-subtitle">Alternate racial traits</div>
+                            <table>
+                                <tr>
+                                    <th>Snapping Jaws</th>
+                                    <td>These Lizardfolk prefer to ambush their prey by using their bites in devastating
+                                        surprise attacks, while doing so they have developed strong and reflexive
+                                        jaws.<br><br>These Lizard folks gain a natural bite attack, dealing damage
+                                        equivalent to that of a creature two size
+                                        categories lower than normal for their size (1d2 for Small races, 1d3 for
+                                        Medium, etc.). The bite is a primary attack, or a secondary attack if the
+                                        creature is wielding manufactured weapons.<br><span class="text-italic">This
+                                            replaces the claws natural
+                                            weapon.</span></td>
+                                </tr>
+                                <tr>
+                                    <th>Ground Adaptability</th>
+                                    <td>These Lizardfolk have adapted to be more effective on land they gain a 20ft
+                                        climb speed and has a +8 racial bonus on all Climb checks. They gain a +2 racial
+                                        bonus on Stealth and Acrobatics. This replaces Swim and Strong Lungs.</td>
+                            </table>
+
+                            <div class="information-subtitle">Favoured class bonus</div>
+                            <table>
+                                <tr>
+                                    <th>Ranger</th>
+                                    <td>Add a +1/4 dodge bonus to Armor Class against the ranger's favored enemies</td>
+                                </tr>
+                                <tr>
+                                    <th>Hunter</th>
+                                    <td>Gain 1/6 of a bonus teamwork feat.</td>
+                                </tr>
+                                <tr>
+                                    <th>Slayer</th>
+                                    <td>Increase the studied target bonus on Perception and Survival checks by 1/4. When
+                                        the slayer gains the stalker class feature, the slayer also gains this increase
+                                        to the studied target bonus on Stealth checks.</td>
+                                </tr>
+                                <tr>
+                                    <th>Brawler</th>
+                                    <td>Gain a +1/2 insight bonus on attack rolls made with the bite or claws as a
+                                        secondary natural attack (to a maximum of +3); the brawler must have a bite or
+                                        claws natural attack to select this option.</td>
+                                </tr>
+                                <tr>
+                                    <th>Monk</th>
+                                    <td>Add +1/4 point to the monk's ki pool.</td>
+                                </tr>
+                                <tr>
+                                    <th>Kineticist</th>
+                                    <td>Add 1/3 to the total number of points of burn that the kineticist can accept
+                                        before she can't choose to accept additional points of burn.</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
