Fix player character

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -95,7 +95,7 @@
                                     <th>Players:</th>
                                     <td>
                                         <ul>
-                                            <li>Dark - Lilliana</li>
+                                            <li>Dark - Lillia</li>
                                             <li>Headlessphsyco - The Butcher, Lucia</li>
                                             <li>Hoob - Nerena</li>
                                             <li>Atlit - Archie</li>
