Fix player name

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -170,7 +170,7 @@
                                     <td>
                                         <ul>
                                             <li>Dark - Mirza</li>
-                                            <li>SteelTofu - Lillia</li>
+                                            <li>SteelTofu - Lilliana</li>
                                             <li>Atlit - Stabby</li>
                                             <li>Headlessphsyco - Crunch</li>
                                         </ul>
