Add character to player

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -97,7 +97,7 @@
                                         <ul>
                                             <li>Dark - Lillia</li>
                                             <li>Headlessphsyco - The Butcher, Lucia</li>
-                                            <li>Hoob - Nerena</li>
+                                            <li>Hoob - Nerena, Alyssa</li>
                                             <li>Atlit - Archie</li>
                                         </ul>
                                     </td>
