Add Gnoll to homebrew Updated Kobold in homebrew

--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -138,7 +138,6 @@
                 <div class="information-item">
                     <div class="information-title">The Lizardfolk</div>
                     <div class="information-content">
-                        Flavortext
                         <div class="pf-race">
                             <table>
                                 <tr>
@@ -258,17 +257,162 @@
                 <div class="information-item">
                     <div class="information-title">The Gnoll</div>
                     <div class="information-content">
-                        Insert content
+                        Flavortext
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Str, +2 Con</td>
+                                </tr>
+                                <tr>
+                                    <th>Type</th>
+                                    <td><span class="text-bold">Medium</span><br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Speed</th>
+                                    <td><span class="text-bold">Normal</span><br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Size</th>
+                                    <td><span class="text-bold">Humanoid (gnoll)</span><br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Senses</th>
+                                    <td>
+                                        <div><span class="text-bold">Darkvision</span><br>Gnolls have darkvision and so
+                                            can see perfectly in the dark up to 60 feet.</div>
+                                        <div><span class="text-bold"></span><br></div>
+                                        <div><span class="text-bold"></span><br></div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Special movement</th>
+                                    <td><span class="text-bold"></span><br></td>
+                                </tr>
+                                <tr>
+                                    <th>Special abilities</th>
+                                    <td>
+                                        <div><span class="text-bold">Natural Armor</span></br>Gnoll hides are remarkably
+                                            tough, granting them a +1 natural armor bonus.</div>
+                                        <div><span class="text-bold">Hulking Strength</span><br>Gnolls Are incredibly
+                                            strong
+                                            their strength increases by 2 for the purposes of carrying extra gear.</div>
+                                        <div><span class="text-bold">Beast Tamer</span><br>These Gnolls gain handle
+                                            animal as
+                                            a class skill and a +2 racial bonus to handle animal.<br>If you gain an
+                                            animal
+                                            companion, you may add Hyena to the list of possible animal companions.
+                                        </div>
+                                        <div><span class="text-bold">Feral Hunter</span><br>Gnolls are also proficient
+                                            with
+                                            Javelins, Shortbows and Longbows.</div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Languages</th>
+                                    <td>Xenophobic Gnolls start knowing their racial language only.<br>Gnolls with high
+                                        Intelligence scores can choose from the following: Goblin, Giant, Undercommon.
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <div class="information-subtitle">Alternate racial traits</div>
+                            <table>
+                                <tr>
+                                    <th>Children of Lamasthu</th>
+                                    <td>Gnolls are favored children of Lamasthu. These Gnolls gain proficiency with the
+                                        Falcion, Nets, Bolas and the scorpion whip.<br>
+                                        <span class="text-italic">This replaces Feral Hunter.</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Chosen of Rovagug</th>
+                                    <td>These Gnolls venerate in destruction. These Gnolls gain proficiency with the
+                                        Greataxe, Greatsword and the Dire Flail.<br>
+                                        <span class="text-italic">This replaces Feral Hunter</span>.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>The Redeemed Ones</th>
+                                    <td>These Gnolls have abandoned their ways of Slavery and Destruction and try to
+                                        walk the path of light and serenity. These Gnolls gain proficiency with the
+                                        Scimitar, Glaive and Falcata.<br>
+                                        <span class="text-italic">This replaces Feral Hunter</span>.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Blood Hunter</th>
+                                    <td>Some Gnoll prefer to hunt alone instead of in a pack, These Gnolls gain Scent to
+                                        a range of 30ft.<br>
+                                        <span class="text-italic">This replaces Beast Tamer</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Intimidating Physique</th>
+                                    <td>These Gnolls are more savage than other Gnolls. Their larger fangs and massive
+                                        size make them a much more intimidating foe.
+                                        You gain a +2 in intimidate and you count as one size larger for the purposes of
+                                        intimidate.<br>
+                                        <span class="text-italic">Replaces Hulking Strength</span>.
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <div class="information-subtitle">Favoured class bonus</div>
+                            <table>
+                                <tr>
+                                    <th>Witch</th>
+                                    <td>Add one spell from the witch spell list to the witch's familiar. This spell must
+                                        be at least one level below the highest spell level she can cast. If the witch
+                                        ever replaces her familiar, the new familiar knows these bonus spells.</td>
+                                </tr>
+                                <tr>
+                                    <th>Shaman</th>
+                                    <td>Add one Divination spell from the sorcerer/wizard spell list that isn't on the
+                                        shaman spell list to the list of spells the shaman knows. This spell must be at
+                                        least 1 level below the highest spell level the shaman can cast.</td>
+                                </tr>
+                                <tr>
+                                    <th>Ranger</th>
+                                    <td>Add +1 hit point to the ranger's animal companion. If the ranger ever replaces
+                                        his animal companion, the new animal companion gains these bonus hit points.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Fighter</th>
+                                    <td>Add a +1/2 circumstance bonus on critical hit confirmation rolls with a weapon
+                                        of the fighter's choice (maximum bonus +4). This bonus does not stack with
+                                        Critical Focus.</td>
+                                </tr>
+                                <tr>
+                                    <th>Magus</th>
+                                    <td>Add +1/4 point to the magus' arcane pool.</td>
+                                </tr>
+                                <tr>
+                                    <th>Skald</th>
+                                    <td>Increase the skald's total number of raging song rounds per day by 1</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
                 <div class="information-item">
                     <div class="information-title">The Kobold</div>
                     <div class="information-content">
-                        The kobold has very weak ability scores, so we've decided to change them.<br>
-                        Kobolds are fast and crafty<br>
-                        Kobold Ability Score Change: -2 Strength, +2 Dexterity, +2 Wisdom
-                        but weak.
+                        The kobold has very weak ability scores, so we've decided to change them.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>-2 Strength, +2 Dexterity, +2 Wisdom<br>Kobolds are fast and crafty but weak
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
