Update Gnoll in homebrew

--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -266,17 +266,18 @@
                                 </tr>
                                 <tr>
                                     <th>Type</th>
-                                    <td><span class="text-bold">Medium</span><br>
+                                    <td><span class="text-bold">Medium</span><br>Gnoll are medium size
                                     </td>
                                 </tr>
                                 <tr>
                                     <th>Speed</th>
-                                    <td><span class="text-bold">Normal</span><br>
+                                    <td><span class="text-bold">Normal</span><br>Gnolls have a base speed of 30 feet
                                     </td>
                                 </tr>
                                 <tr>
                                     <th>Size</th>
-                                    <td><span class="text-bold">Humanoid (gnoll)</span><br>
+                                    <td><span class="text-bold">Humanoid (gnoll)</span><br>Gnolls are monstrous
+                                        humanoids.
                                     </td>
                                 </tr>
                                 <tr>
@@ -284,8 +285,6 @@
                                     <td>
                                         <div><span class="text-bold">Darkvision</span><br>Gnolls have darkvision and so
                                             can see perfectly in the dark up to 60 feet.</div>
-                                        <div><span class="text-bold"></span><br></div>
-                                        <div><span class="text-bold"></span><br></div>
                                     </td>
                                 </tr>
                                 <tr>
