Change schedule time to 24 hour notation

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -79,7 +79,7 @@
                                     <th>Schedule:</th>
                                     <td>
                                         <ul>
-                                            <li>Every friday at 7:30pm</li>
+                                            <li>Every friday at 19:30</li>
                                         </ul>
                                     </td>
                                 </tr>
@@ -116,7 +116,7 @@
                                     <th>Schedule:</th>
                                     <td>
                                         <ul>
-                                            <li>Every friday at 7:30pm</li>
+                                            <li>Every friday at 19:30</li>
                                         </ul>
                                     </td>
                                 </tr>
@@ -153,7 +153,7 @@
                                     <th>Schedule:</th>
                                     <td>
                                         <ul>
-                                            <li>Every sunday at 2:00pm</li>
+                                            <li>Every sunday at 14:00</li>
                                         </ul>
                                     </td>
                                 </tr>
